--- a/src/style.css
+++ b/src/style.css
@@ -1,25 +1,31 @@
-* {
-    margin: 0;
-    padding: 0;
-  }
-  
-  html, body {
-    overflow: hidden;
-  }
-  
-  .container {
-    display: flex;
-    height: 100vh;
-  }
-  
-  .canvas {
-    flex: 1;
-  }
-  
-  .text-content {
-    width: 30%;
-    background-color: #f0f0f0;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-  
+.resize-container {
+  display: flex;
+  height: 100vh;
+}
+
+.resizable {
+  resize: both;
+  overflow: auto;
+  border: 1px solid #ccc;
+  width: 20px; /* Изначальная ширина маленького окна */
+  height: 10vh; /* Высота на весь экран */
+}
+
+.canvas {
+  width: 100%;
+  height: 100%;
+}
+
+.text-content {
+  width: 30%;
+  background-color: #f0f0f0;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.text-content {
+  width: 100%;
+  background-color: #ff00f2;
+  padding: 20px;
+  box-sizing: border-box;
+}
